src/objects/RollUp__RollUp_Filter__c.object
<CustomObject>
    <fields>
        <fullName>RollUp__Filter_Field__c</fullName>
        <label>Filter Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RollUp__Filter_Operation__c</fullName>
        <label>Filter Operation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>equals</fullName>
                </value>
                <value>
                    <fullName>not equals</fullName>
                </value>
                <value>
                    <fullName>starts with</fullName>
                </value>
                <value>
                    <fullName>ends with</fullName>
                </value>
                <value>
                    <fullName>contains</fullName>
                </value>
                <value>
                    <fullName>does not contain</fullName>
                </value>
                <value>
                    <fullName>less than</fullName>
                </value>
                <value>
                    <fullName>greater than</fullName>
                </value>
                <value>
                    <fullName>less or equal</fullName>
                </value>
                <value>
                    <fullName>greater or equal</fullName>
                </value>
                <value>
                    <fullName>includes</fullName>
                </value>
                <value>
                    <fullName>excludes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RollUp__Filter_Value__c</fullName>
        <label>Filter Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RollUp__Index__c</fullName>
        <label>Index</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RollUp__RollUp__c</fullName>
        <label>RollUp</label>
        <referenceTo>RollUp__RollUp__c</referenceTo>
        <relationshipLabel>RollUp Filters</relationshipLabel>
        <relationshipName>RollUp_Filters</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>RollUp Filter</label>
    <nameField>
        <displayFormat>RUF-{000000}</displayFormat>
        <label>RollUp Filter ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RollUp Filters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>RollUp__Filter_Operation_is_required</fullName>
        <active>true</active>
        <errorConditionFormula>ispickval(RollUp__Filter_Operation__c, &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>RollUp__Filter_Operation__c</errorDisplayField>
        <errorMessage>Filter type is required.</errorMessage>
    </validationRules>
</CustomObject>